2005-06-16  Dan Williams <dcbw@redhat.com>

	* Backport Wireless Scan Methods from HEAD (see HEAD's changelog for full details)

2005-06-16  Dan Williams <dcbw@redhat.com>

	* Remove the bits of the VPN implementation since this branch
		will never get it.

2005-06-10  Dan Williams <dcbw@redhat.com>

	* src/Makefile.am
		- Add SYSCONFDIR define to compile line

	* src/NetworkManagerSystem.c
	  src/NetworkManagerSystem.c
		- (nm_system_device_add_ip4_nameserver): new function
		- (nm_system_device_clear_ip4_nameservers): new function
		- (nm_system_device_add_domain_search): new function
		- (nm_system_device_clear_domain_searches): new function

	* src/backends/NetworkManagerRedHat.c
		- (get_current_profile_name): new function, grab current network profile name from
			/etc/sysconfig/network
		- (set_ip4_config_from_resolv_conf): new function, parse a resolv.conf and
			update an IP4 Config structure's settings from it
		- (nm_system_device_setup_static_ip4_config): if we're using static IP on this device,
			get DNS info from current network profile

	* src/NetworkManagerDevice.c
		- (nm_device_activation_configure_ip): clear domains and nameservers before setting
			up static IP on the card, and update our idea of the card's IP address afterwards

2005-05-16  Dan Williams  <dcbw@redhat.com>

	* dispatcher-daemon/Makefile.am
	  panel-applet/Makefile.am
		- Fix dispatcher and applet CFLAGS so they gets compiled with FORTIFY_SOURCE

2005-05-16  Dan Williams  <dcbw@redhat.com>

	* dhcpcd/client.c
		- (dhcp_handle_transaction): Fix condition that may have resulted
			in incorrect return of RET_DHCP_SUCCESS when we really timed out.

2005-05-15  Dan Williams  <dcbw@redhat.com>

	* dispatcher-daemon/NetworkManagerDispatcher.c
		- (main): sync arguments with NetworkManager and the applet, now use
			"--no-daemon" rather than "daemon=no"
		- (nmd_print_usage): Fix script path in usage message

2005-05-14  Dan Williams  <dcbw@redhat.com>
